--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.loading {
+    display: flex;
+    align-items: center;
+    height: 100vh;
+}
